# LanternGames

./: .gitignore  CLAUDE.md  README.md  TASKS.md
app/: index.html  package-lock.json  package.json
app/scripts/: audit-text.ts  extract-zork.ts  parse-walkthrough.ts  smoke-conditional-effects.ts  smoke-handler.ts  smoke-item-appearance.ts  smoke-sword-glow.ts  smoke-vehicle.ts  test-puzzles.ts  test-variant.ts  test-walkthrough.ts
app/src/: App.css  App.tsx  SaveLoadDialog.tsx  debug.config.json  debug.ts  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src/engine/: _smoke.ts  actions.ts  engine.ts  events.ts  intents.ts  parser.ts  rank.ts  render.ts  renderNarration.ts  state.ts  substituteArgs.ts  view.ts
app/src/llm/: DirectAnthropicClient.ts  OllamaClient.ts  OpenAICompatibleClient.ts  narrator.ts  providers.ts  transport.ts  types.ts
app/src/persistence/: localSave.ts
app/src/stories/: hello-adventure.json  index.ts  zork-1.json  zork-1.overrides.json
app/src/story/: schema.ts  validate.ts
docs/: authors-guide.md  dev.md  local-llm.md  narrator-prompts.md  puzzles.txt  story-format.md  text-audit.md  walkthrough.txt  walkthrough3.txt  zork-canon-sources.md  zork-canonical-text.md
