[package]
name = "app"
version = "0.1.0"
description = "LanternGames — LLM-narrated text-adventure engine"
authors = ["Steven Gilbert"]
license = ""
repository = "https://github.com/StevenJayGilbert/LanternGames"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# `devtools` keeps the WebView inspector (Ctrl+Shift+I) available in release
# builds too, so testers can read the debug console in the shipped .exe.
tauri = { version = "2.11.1", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
